@@ -368,6 +368,12 @@ if ( ! class_exists( 'Gutenberg_Editor_CSS' ) ) :
 				$desktop_css['.edit-post-visual-editor a'] = array(
 					'text-decoration' => 'underline',
 				);
+
+				$excluding_anchor_selectors = Astra_Dynamic_CSS::unset_builder_elements_underline() ? '.edit-post-visual-editor a.uagb-tabs-list, .edit-post-visual-editor .uagb-ifb-cta a, .edit-post-visual-editor a.uagb-marketing-btn__link, .edit-post-visual-editor .uagb-post-grid a, .edit-post-visual-editor .uagb-toc__wrap a, .edit-post-visual-editor .uagb-taxomony-box a, .edit-post-visual-editor .uagb_review_block a' : '';
+
+				$desktop_css[ $excluding_anchor_selectors ] = array(
+					'text-decoration' => 'none',
+				);
 			}
 
 			$css .= astra_parse_css( $desktop_css );
