@@ -1,4 +1,5 @@
 v3.6.9
+- Improvement: Introduced filter to exclude anchor links from text-decoration style. ( Needs Doc )
 - Fix: Auto scroll isssue on clicking Footer Builder in customiser preview.
 
 v3.6.8
